Enhance Boox drawing integration with stroke queuing and resizing handling to prevent stretching during resize

--- a/src/components/formats/current/writing/writing-embed/writing-embed.scss
+++ b/src/components/formats/current/writing/writing-embed/writing-embed.scss
@@ -7,6 +7,12 @@
     transition-timing-function: ease-out;
 }
 
+.ddc_ink_resize-container.ddc_ink_resize-container--boox,
+.ddc_ink_resize-container.ddc_ink_resize-container--boox.ddc_ink_smooth-transition,
+.ddc_ink_resize-container.ddc_ink_resize-container--boox .ddc_ink_writing-editor {
+    transition: none !important;
+}
+
 
 
 
